--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,4 +1,4 @@
- <h2 {% if site.style == 'dark' %}class="text-white"{% endif %}>Projects</h2>
+ <h2 {% if site.style == 'dark' %}class="text-white"{% endif %}>My Projects</h2>
 <p class="f4 mb-4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">Learn more about myself and my projects.</p>
 <div class="d-flex flex-wrap gutter-condensed mb-4">
   {% for topic in site.topics %}
